# dl-from-scratch

./: .github_CONTRIBUTING.md  .github_workflows.yml  .gitignore  CONTRIBUTING.md  GITHUB_SETUP_GUIDE.md  LICENSE  MLFLOW_EXAMPLE_README.md  MLOPS_INTERVIEW_GUIDE.md  README.md  data.py  docker-compose.mlflow.yml  inference.py  main.py  mlflow-requirements.txt  model.py  pyproject.toml
cnn/: README.md  __init__.py  model.py  train.py
cuda/: README.md  __init__.py  tutorial.py
docs/: MODEL_COMPARISON.md
lora/: README.md  __init__.py  model.py  requirements.txt  train.py
mlops-example/: Dockerfile.mlflow  README.md  mlflow_tracking_example.py
rnn/: README.md  __init__.py  model.py  train.py
transformer/: ARCHITECTURE.md  README.md  config.py  train.py
