[project]
name = "dl-from-scratch"
version = "0.1.0"
description = "深度学习从零实现：CNN、RNN、Transformer 与 CUDA 编程"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "requests>=2.28.0",
    "matplotlib>=3.7.0",
    "pillow>=9.5.0",
]
