[project]
name = "dl-from-scratch"
version = "0.1.0"
description = "深度学习从零实现：CNN、RNN、Transformer 与 CUDA 编程"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "requests>=2.28.0",
    "matplotlib>=3.7.0",
    "pillow>=9.5.0",
    # LoRA/LLaMA 微调依赖（可选依赖，按需安装）
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "peft>=0.6.0",
    "bitsandbytes>=0.41.0",
]

[project.optional-dependencies]
# LLaMA 微调时单独安装
# 运行: uv pip install "transformers[accelerate]" peft bitsandbytes
train = ["transformers[accelerate]", "peft", "bitsandbytes"]
